objects/GP_TO_GGP__c.object
<CustomObject>
    <fields>
        <fullName>CUSTOMER_GRANDPARENT_ID__c</fullName>
        <externalId>true</externalId>
        <label>CUSTOMER_GRANDPARENT_ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CUSTOMER_GRANDPARENT_NM__c</fullName>
        <label>CUSTOMER_GRANDPARENT_NM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_GREAT_GP_ID__c</fullName>
        <label>CUST_GREAT_GP_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_GREAT_GP_NM__c</fullName>
        <label>CUST_GREAT_GP_NM</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>GP TO GGP</label>
    <nameField>
        <label>GP TO GGP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP TO GGPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>